0028126: Visualization, Path tracing - Provide ability to use two-sided scattering models